--- a/index-A1.html
+++ b/index-A1.html
@@ -2,22 +2,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home</title>
+<title>Projects</title>
 <link rel= "stylesheet" href="stylesheet.css">
 </head>
 <body>
-
-<!--Nav Bar-->
 <header>
     <div class=heading1>
-        <h1>I am Nathan</h1>
+        <h1>NATHAN - PORTFOLIO - HOME</h1>
     </div>
-    <ul class="navbar">
-        <img src="" alt="Nathan Photo" width="50" height="50">
-        <li class="navbarbutton"><a href="contact.asp">CONTACT</a></li>
-        <li class="navbarbutton"><a href="news.asp">PROJECTS</a></li>
-        <li class="navbarbutton"><a href="default.asp">HOME</a></li><li>
-    </ul>  
+    <!--Nav Bar-->
+    <nav class="navbar">
+        <li class="navbarbutton"><a href="contact-A1.html">CONTACT</a></li>
+        <li class="navbarbutton"><a href="projects-A1.html">PROJECTS</a></li>
+        <li class="navbarbutton"><a href="index-A1.html">HOME</a></li><li>
+    </nav>  
 </header>
+
+
+<footer class="page_end">
+    <div class = page_end-text>
+        <p>&copy 2022 Created By Nathan Chiang </p>
+    </div>
+</footer>
 </body>
 </html>
