--- a/projects-A1.html
+++ b/projects-A1.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home</title>
+<title>Projects</title>
 <link rel= "stylesheet" href="stylesheet.css">
 </head>
 <body>
@@ -24,23 +24,23 @@
 </div>
 
 <div class="row">
-    <div class="project_column">
+    <div class="column">
         <section class="proj_column_content">
             <div class = "showcase">
-                <img src="dynasty1.png" alt="A formation of ancient chinese soldier with flags made in Roblox Studio" height=300px>  
-              </div>
-            <h1>Ancient China </h1>
-            <p class="project_description">
+                <img src="dynasty1.png" alt="A formation of ancient chinese soldier with flags made in Roblox Studio" height=300px>
+                <h1>Ancient China </h1>
+                <p class="project_description">
                 This project originated from a roleplay and collaborative storytelling community with friends and other developers who participated in their spare time. 
                 In this community, I played the role of a Han dynasty-esque empire which required me to model assets and write entire story arcs, pushing my skills in writing and modelling to the absolute limit.
-            </p>
+                </p> 
+              </div>
         </section>
     </div>
-    <div class="project_column">
+    <div class="column">
         <section class="proj_column_content">
             <div class = "showcase">
-              <img src="fighter_jet.png" alt="A futuristic military jet above the clouds made in Roblox Studio" height=300px>
-              <h1>Military Aircraft </h1>
+                <img src="fighter_jet.png" alt="A futuristic military jet above the clouds made in Roblox Studio" height=300px>
+                <h1>Military Aircraft </h1>
                 <p>
                 This project started mostly as a friendly competition between a group of developers for a flightsim.
                 Each developer would try to outdo the other in terms of how "cool" of a jet they could make to be imported and added to the game. Though I always lost to those who exclusively used blender, I gained many skills in CSG modelling and visual design.
