--- a/contact-A1.html
+++ b/contact-A1.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Projects</title>
+<title>Contact</title>
 <link rel= "stylesheet" href="stylesheet.css">
 </head>
 <body>
@@ -18,6 +18,39 @@
         <li class="navbarbutton"><a href="index-A1.html">HOME</a></li><li>
     </nav>  
 </header>
+
+<div class="contact_form">
+    <form>
+        <div>
+            <label>First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="First Name">
+        </div>
+        <div>
+            <label>Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Last Name">
+        </div>
+        <div>
+            <label>Subject</label>
+            <textarea id="subject" name="subject" placeholder="Text Here" style="height:200px"></textarea>
+        </div>
+        <div>
+            <label>Country</label>
+            <select id="country" name="country">
+            <option value="canada">Canada</option>
+            <option value="usa">USA</option>
+            <option value="uk">UK</option>
+            <option value="australia">Australia</option>
+        </div>
+        
+        <div>
+            <input type="submit" value="Submit">
+        </div>
+
+      </select>
+  
+  
+    </form>
+  </div>
 
 <footer class="page_end">
     <div class = page_end-text>
