--- a/projects-A1.html
+++ b/projects-A1.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <li class="navbarbutton"><a href="contact-A1.html">CONTACT</a></li>
         <li class="navbarbutton"><a href="projects-A1.html">PROJECTS</a></li>
-        <li class="navbarbutton"><a href="index-A1.html">HOME</a></li><li>
+        <li class="navbarbutton"><a href="index.html">HOME</a></li><li>
     </nav>  
 </header>
 
